@@ -8,7 +8,8 @@ reasonably understood to denote a set of inventory items.  That could be:
 
 	* True:  All items.
 	* False:  No items.
-	* A slotspec (as generated by Utility.Item.Slot.*()):  Those items
+	* One or more slotspecs (as generated by Utility.Item.Slot.*()):
+		Those items
 	* A filter:  The items picked by that filter
 	* A table of { slotspec:details } pairs:  Those pairs.
 	* A table of { filter:slotspec } pairs:  The union of the results
@@ -23,8 +24,9 @@ which is, of course, still a baggish.
 
 
 The next interesting concept is a "filter".  A filter is a thing which,
-invoked on a slotspec, yields items which "match" the filter.  A filter
-has its own default slotspec, or you can invoke it on any other slotspec.
+invoked on a slotspec (or list of slotspecs), yields items which "match"
+the filter.  A filter has its own default slotspec, or you can invoke it on
+any other slotspec.
 
 Filter conditions are still being developed, but they include matches
 of strings or numbers, and functions.  A condition can be specified in
@@ -66,6 +68,28 @@ details == nil.
 Relational operators try to handle nil values sanely, which means that
 a nil value is less than any non-nil value, and two nil values are equal
 to each other.
+
+You can create a filter using LibGetOpt, or something equivalent, using
+the
+	filter:from_args(table)
+function; this is intended to be used with an argstring like that of
+	filter:argstring()
+This is the guts of the command line filter specification in LootSorter
+and Baggotry; however, you can also use it to create a
+SavedVariables-friendly definition of a filter, if you pass it a
+similar structure.  If you don't want to mess with the getopt-type
+functionality, just pass it:
+
+	{
+		leftover_args = { conditions }
+	}
+
+where conditions are a series of strings looking like:
+	[+!]field:relop:value
++ means requires, ! means excludes, default is include.  So for instance:
+	!stack:>:15
+creates a filter which includes everything that doesn't have a stack count
+of 15 or more.
 
 Next big feature:  Bagground Processing (TM).  When a LibBaggotry function
 needs to perform many operations, it performs one per update rather than
@@ -136,3 +160,7 @@ The utilities are still being worked on, but:
 		Returns nil or shard, faction, charname.
 	Library.LibBaggotry.rarity_color(rarity)
 		returns r, g, b
+	Library.LibBaggotry.merge_items(baggish)
+		Returns a merged list in which stacks of the same item
+		are combined, with _charspec, _slotspec, etc. updated
+		suitably.  Keys will be item type, rather than slots.
